--- a/src/main/resources/com/example/client/login-form.fxml
+++ b/src/main/resources/com/example/client/login-form.fxml
@@ -19,7 +19,7 @@
                </VBox.margin>
             </Label>
             <TextField />
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="136.0" text="Accedi">
+            <Button mnemonicParsing="false" onAction="#aceesso" prefHeight="25.0" prefWidth="136.0" text="Accedi">
                <VBox.margin>
                   <Insets left="240.0" top="20.0" />
                </VBox.margin>
