--- a/src/main/resources/com/example/client/general/log.fxml
+++ b/src/main/resources/com/example/client/general/log.fxml
@@ -1,22 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="523.0" prefWidth="611.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.client.LogControllers">
+<AnchorPane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="523.0" prefWidth="611.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.client.LogControllers">
    <children>
       <BorderPane fx:id="mainPaneLog" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: gainsboro;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
-            <HBox prefHeight="63.0" prefWidth="629.0" spacing="20.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
+            <HBox fx:id="hboxLog" prefHeight="63.0" prefWidth="629.0" spacing="20.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
                <children>
                   <Label text="Come desideri accedere?" />
-                  <Button mnemonicParsing="false" text="Clliente" />
-                  <Button mnemonicParsing="false" text="Impiegato" />
-                  <Button mnemonicParsing="false" text="Amministratore" />
+                  <ChoiceBox fx:id="UserChoiceBox" prefWidth="150.0" />
                </children>
                <padding>
                   <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
