--- a/src/main/resources/com/example/client/general/login-form.fxml
+++ b/src/main/resources/com/example/client/general/login-form.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
 <VBox fx:id="loginVBox" prefHeight="400.0" prefWidth="607.0" style="-fx-background-color: gainsboro;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.client.LogFormControllers">
@@ -22,11 +23,11 @@
          </VBox.margin>
       </Button>
       <Button fx:id="registrationButton" mnemonicParsing="false" onAction="#onRegistrationButtonClick" text="Registrati" />
-      <Label fx:id="loginMessageLable" prefHeight="17.0" prefWidth="98.0" text="Bottone premuto">
-         <VBox.margin>
-            <Insets left="100.0" />
-         </VBox.margin>
-      </Label>
+      <HBox alignment="TOP_CENTER" prefHeight="100.0" prefWidth="200.0">
+         <children>
+            <Label fx:id="loginMessageLable" prefHeight="17.0" prefWidth="137.0" style="-fx-text-fill: red;" />
+         </children>
+      </HBox>
    </children>
    <padding>
       <Insets left="150.0" right="150.0" top="50.0" />
