--- a/src/main/resources/com/example/client/cliente/client-initial-page.fxml
+++ b/src/main/resources/com/example/client/cliente/client-initial-page.fxml
@@ -55,24 +55,41 @@
                         <Insets left="10.0" right="10.0" />
                      </padding>
                   </VBox>
-                  <VBox fx:id="VboxRevisione" prefHeight="200.0" prefWidth="100.0">
+                  <VBox fx:id="VboxRevisione" prefHeight="176.0" prefWidth="157.0">
                      <children>
                         <Label style="-fx-font-weight: bold;" text="REVISIONE">
                            <VBox.margin>
                               <Insets left="35.0" top="10.0" />
                            </VBox.margin>
                         </Label>
-                        <Label text="confezioni: _">
-                           <VBox.margin>
-                              <Insets top="15.0" />
-                           </VBox.margin>
-                        </Label>
-                        <Label text="casse: _" />
-                        <Button mnemonicParsing="false" onAction="#onAcquistaButton" text="Acquista">
+                        <HBox prefHeight="20.0" prefWidth="138.0">
+                           <children>
+                              <Label text="confezioni: " />
+                              <Label fx:id="nConfezioni" text="0" />
+                           </children>
                            <VBox.margin>
                               <Insets top="10.0" />
                            </VBox.margin>
-                        </Button>
+                        </HBox>
+                        <HBox prefHeight="18.0" prefWidth="138.0">
+                           <children>
+                              <Label prefHeight="17.0" prefWidth="43.0" text="casse: " />
+                              <Label fx:id="nCasse" text="0" />
+                           </children>
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
+                        </HBox>
+                        <HBox prefHeight="29.0" prefWidth="138.0">
+                           <children>
+                              <Label prefHeight="17.0" prefWidth="43.0" text="prezzo" />
+                              <Label fx:id="prezzo" text="0€" />
+                           </children>
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
+                        </HBox>
+                        <Button mnemonicParsing="false" onAction="#onAcquistaButton" text="Acquista" />
                      </children>
                      <padding>
                         <Insets left="10.0" right="10.0" />
