--- a/src/main/resources/com/example/client/cliente/left-pagamento.fxml
+++ b/src/main/resources/com/example/client/cliente/left-pagamento.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="370.0" prefWidth="158.0" style="-fx-border-width: 0 1 0 0; -fx-border-color: black;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.client.PagamentoController">
@@ -16,12 +17,12 @@
                   <Insets top="10.0" />
                </VBox.margin>
             </Label>
-            <RadioButton mnemonicParsing="false" onAction="#loadBonifico" selected="true" text="BONIFICO">
+            <RadioButton fx:id="bonificoChoice" disable="true" mnemonicParsing="false" onAction="#loadBonifico" selected="true" text="BONIFICO">
                <toggleGroup>
                   <ToggleGroup fx:id="tipologiaPagamento" />
                </toggleGroup>
             </RadioButton>
-            <RadioButton mnemonicParsing="false" onAction="#loadCarta" text="CARTA DI CREDITO" toggleGroup="$tipologiaPagamento" />
+            <RadioButton fx:id="cartaChoice" disable="true" mnemonicParsing="false" onAction="#loadCarta" text="CARTA DI CREDITO" toggleGroup="$tipologiaPagamento" />
          </children>
          <padding>
             <Insets left="10.0" right="10.0" />
@@ -34,22 +35,34 @@
                   <Insets left="35.0" top="10.0" />
                </VBox.margin>
             </Label>
-            <Label text="confezioni: _">
-               <VBox.margin>
-                  <Insets top="15.0" />
-               </VBox.margin>
-            </Label>
-            <Label text="casse: _" />
-            <Button mnemonicParsing="false" onAction="#onIndietroCLick" text="Indietro">
+            <HBox prefHeight="20.0" prefWidth="138.0">
+               <children>
+                  <Label text="confezioni: " />
+                  <Label fx:id="nConfezioni" text="0" />
+               </children>
                <VBox.margin>
                   <Insets top="10.0" />
                </VBox.margin>
-            </Button>
-            <Button mnemonicParsing="false" text="Acquista">
+            </HBox>
+            <HBox prefHeight="18.0" prefWidth="138.0">
+               <children>
+                  <Label prefHeight="17.0" prefWidth="43.0" text="casse: " />
+                  <Label fx:id="nCasse" text="0" />
+               </children>
                <VBox.margin>
-                  <Insets left="35.0" top="10.0" />
+                  <Insets top="10.0" />
                </VBox.margin>
-            </Button>
+            </HBox>
+            <HBox prefHeight="29.0" prefWidth="138.0">
+               <children>
+                  <Label prefHeight="17.0" prefWidth="43.0" text="prezzo" />
+                  <Label fx:id="prezzo" text="0€" />
+               </children>
+               <VBox.margin>
+                  <Insets top="10.0" />
+               </VBox.margin>
+            </HBox>
+            <Button mnemonicParsing="false" onAction="#onAnnullaClick" text="Annulla" />
          </children>
          <padding>
             <Insets left="10.0" right="10.0" />
