--- a/src/main/resources/com/example/client/cliente/left-ricerca.fxml
+++ b/src/main/resources/com/example/client/cliente/left-ricerca.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
 <VBox prefHeight="372.0" prefWidth="159.0" style="-fx-border-color: black; -fx-border-width: 0 1 0 0;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.client.RicercaController">
@@ -20,14 +21,14 @@
                   <Insets top="15.0" />
                </VBox.margin>
             </Label>
-            <TextField />
+            <TextField fx:id="nomeVino" />
             <Label text="anno di produzione">
                <VBox.margin>
                   <Insets top="10.0" />
                </VBox.margin>
             </Label>
-            <TextField />
-            <Button mnemonicParsing="false" text="Ricerca">
+            <TextField fx:id="annoProduzione" />
+            <Button mnemonicParsing="false" onAction="#ricercaVini" text="Ricerca">
                <VBox.margin>
                   <Insets top="10.0" />
                </VBox.margin>
@@ -37,24 +38,41 @@
             <Insets left="10.0" right="10.0" />
          </padding>
       </VBox>
-      <VBox fx:id="VboxRevisione" prefHeight="200.0" prefWidth="100.0">
+      <VBox fx:id="VboxRevisione" prefHeight="176.0" prefWidth="157.0">
          <children>
             <Label style="-fx-font-weight: bold;" text="REVISIONE">
                <VBox.margin>
                   <Insets left="35.0" top="10.0" />
                </VBox.margin>
             </Label>
-            <Label text="confezioni: _">
-               <VBox.margin>
-                  <Insets top="15.0" />
-               </VBox.margin>
-            </Label>
-            <Label text="casse: _" />
-            <Button mnemonicParsing="false" onAction="#onAcquistaButton" text="Acquista">
+            <HBox prefHeight="20.0" prefWidth="138.0">
+               <children>
+                  <Label text="confezioni: " />
+                  <Label fx:id="nConfezioni" text="0" />
+               </children>
                <VBox.margin>
                   <Insets top="10.0" />
                </VBox.margin>
-            </Button>
+            </HBox>
+            <HBox prefHeight="18.0" prefWidth="138.0">
+               <children>
+                  <Label prefHeight="17.0" prefWidth="43.0" text="casse: " />
+                  <Label fx:id="nCasse" text="0" />
+               </children>
+               <VBox.margin>
+                  <Insets top="10.0" />
+               </VBox.margin>
+            </HBox>
+            <HBox prefHeight="29.0" prefWidth="138.0">
+               <children>
+                  <Label prefHeight="17.0" prefWidth="43.0" text="prezzo" />
+                  <Label fx:id="prezzo" text="0€" />
+               </children>
+               <VBox.margin>
+                  <Insets top="10.0" />
+               </VBox.margin>
+            </HBox>
+            <Button mnemonicParsing="false" onAction="#onAcquistaButton" text="Acquista" />
          </children>
          <padding>
             <Insets left="10.0" right="10.0" />
