--- a/src/main/resources/com/example/client/cliente/scheda-cartaDiCredito.fxml
+++ b/src/main/resources/com/example/client/cliente/scheda-cartaDiCredito.fxml
@@ -7,9 +7,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.client.PagamentoController">
    <children>
+      <Label fx:id="risultatoPagamento" />
       <Label text="CODICE CARTA" />
       <TextField />
       <HBox alignment="CENTER" prefHeight="47.0" prefWidth="600.0" spacing="20.0">
@@ -31,7 +31,7 @@
             <Insets bottom="20.0" top="20.0" />
          </VBox.margin>
       </HBox>
-      <Button mnemonicParsing="false" text="CONTINUA" />
+      <Button fx:id="button1" mnemonicParsing="false" onAction="#confermaPagamento" text="CONTINUA" />
    </children>
    <padding>
       <Insets left="100.0" right="100.0" />
