--- a/src/main/resources/com/example/client/cliente/proposta-acquisto-client.fxml
+++ b/src/main/resources/com/example/client/cliente/proposta-acquisto-client.fxml
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="202.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="372.0" prefWidth="442.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.client.RicercaController">
    <children>
-      <VBox layoutX="250.0" layoutY="63.0" prefHeight="5.0" prefWidth="600.0" AnchorPane.bottomAnchor="197.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Spiacenti ma non siamo in grado di soddisfare la sua richiesta.Vuole effettuare una proposta di acquisto?" wrappingWidth="395.58642578125">
+         <font>
+            <Font size="18.0" />
+         </font>
+         <VBox.margin>
+            <Insets bottom="20.0" left="5.0" right="5.0" top="10.0" />
+         </VBox.margin>
+      </Text>
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="50.0">
          <children>
-            <TextArea editable="false" prefHeight="60.0" prefWidth="600.0" text="Spiacenti ma non siamo in grado di soddisfare la sua richiesta.&#10;Vuole effettuare una proposta di acquisto?">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </TextArea>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="50.0">
-               <children>
-                  <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="37.0" text="SI" />
-                  <Button mnemonicParsing="false" text="NO" />
-               </children>
-            </HBox>
+            <Button fx:id="propostaSi" mnemonicParsing="false" onAction="#accettaProposta" prefHeight="25.0" prefWidth="37.0" text="SI" />
+            <Button fx:id="propostaNo" mnemonicParsing="false" onAction="#annullaProposta" text="NO" />
          </children>
-      </VBox>
+      </HBox>
    </children>
-</AnchorPane>
+</VBox>
