--- a/src/main/resources/com/example/client/impiegato/scheda-cliente.fxml
+++ b/src/main/resources/com/example/client/impiegato/scheda-cliente.fxml
@@ -1,25 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
 
-
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.client.SchedeController">
    <children>
       <Label text="NOME" />
-      <TextField editable="false" prefHeight="26.0" prefWidth="277.0" />
+      <TextField fx:id="nome" editable="false" prefHeight="26.0" prefWidth="277.0" />
       <Label text="COGNOME" />
-      <TextField editable="false" prefHeight="26.0" prefWidth="277.0" />
+      <TextField fx:id="cognome" editable="false" prefHeight="26.0" prefWidth="277.0" />
       <Label text="CODICE FISCALE" />
-      <TextField editable="false" prefHeight="26.0" prefWidth="277.0" />
+      <TextField fx:id="codFis" editable="false" prefHeight="26.0" prefWidth="277.0" />
       <Label text="EMAIL" />
-      <TextField editable="false" prefHeight="26.0" prefWidth="277.0" />
+      <TextField fx:id="email" editable="false" prefHeight="26.0" prefWidth="277.0" />
       <Label text="NUMERO TELEFONICO" />
-      <TextField editable="false" prefHeight="26.0" prefWidth="277.0" />
+      <TextField fx:id="telefono" editable="false" prefHeight="26.0" prefWidth="277.0" />
       <Label text="INDIRIZZO DI CONSEGNA" />
-      <TextField editable="false" prefHeight="26.0" prefWidth="277.0" />
+      <TextField fx:id="indirizzo" editable="false" prefHeight="26.0" prefWidth="277.0" />
+      <Button mnemonicParsing="false" onAction="#indietro" text="indietro">
+         <VBox.margin>
+            <Insets top="10.0" />
+         </VBox.margin>
+      </Button>
    </children>
    <padding>
       <Insets bottom="50.0" left="150.0" right="150.0" top="50.0" />
