--- a/src/main/resources/com/example/client/amministratore/adm-initial-page.fxml
+++ b/src/main/resources/com/example/client/amministratore/adm-initial-page.fxml
@@ -13,7 +13,7 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.client.FiltroController">
    <children>
-      <BorderPane fx:id="mainBorder" layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <BorderPane fx:id="mainBorderImpiegati" layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
             <HBox alignment="CENTER_LEFT" prefHeight="28.0" prefWidth="600.0" spacing="20.0" style="-fx-border-color: black; -fx-border-width: 0 0 1 0;" BorderPane.alignment="CENTER">
                <children>
@@ -49,19 +49,19 @@
                         <Insets top="20.0" />
                      </VBox.margin>
                   </Label>
-                  <TextField />
+                  <TextField fx:id="filtro_cognome" />
                   <Label text="data1">
                      <VBox.margin>
                         <Insets top="20.0" />
                      </VBox.margin>
                   </Label>
-                  <DatePicker />
+                  <DatePicker fx:id="data1" />
                   <Label text="data2">
                      <VBox.margin>
                         <Insets top="20.0" />
                      </VBox.margin>
                   </Label>
-                  <DatePicker />
+                  <DatePicker fx:id="data2" />
                   <Button mnemonicParsing="false" text="RICERCA">
                      <VBox.margin>
                         <Insets top="20.0" />
