--- a/src/main/resources/com/example/client/amministratore/registrationForm.fxml
+++ b/src/main/resources/com/example/client/amministratore/registrationForm.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.client.AdmController">
    <children>
       <VBox fx:id="registrationVBox" alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="454.0" prefWidth="606.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <padding>
@@ -15,38 +15,41 @@
          </padding>
          <children>
             <Label text="NOME" />
-            <TextField prefHeight="16.0" prefWidth="374.0" />
+            <TextField fx:id="nome" prefHeight="16.0" prefWidth="374.0" />
             <Label text="COGNOME">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
             </Label>
-            <TextField />
+            <TextField fx:id="cognome" />
             <Label text="CODICE FISCALE">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
             </Label>
-            <TextField prefHeight="26.0" prefWidth="470.0" />
+            <TextField fx:id="codiceFiscale" prefHeight="26.0" prefWidth="470.0" />
             <Label text="NUMEROTELEFONICO">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
             </Label>
-            <TextField />
+            <TextField fx:id="numTelefonico" />
             <Label text="EMAIL">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
             </Label>
-            <TextField />
+            <TextField fx:id="email" />
             <Label text="INDIRIZZO DI RESIDENZA">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
             </Label>
-            <TextField />
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="126.0" text="Registra Impiegato">
+            <TextField fx:id="indirizzo" />
+            <Label text="PASSWORD" />
+            <TextField fx:id="password" />
+            <Label fx:id="registrationMessage" prefHeight="17.0" prefWidth="0.0" style="-fx-text-fill: red;" />
+            <Button mnemonicParsing="false" onAction="#registrazione" prefHeight="25.0" prefWidth="126.0" text="Registra Impiegato">
                <VBox.margin>
                   <Insets left="178.0" top="15.0" />
                </VBox.margin>
