--- a/src/main/resources/com/example/client/impiegato/left-ordini-proposte.fxml
+++ b/src/main/resources/com/example/client/impiegato/left-ordini-proposte.fxml
@@ -24,13 +24,13 @@
             <Insets top="20.0" />
          </VBox.margin>
       </Label>
-      <DatePicker />
+      <DatePicker fx:id="data1" />
       <Label text="data2">
          <VBox.margin>
             <Insets top="20.0" />
          </VBox.margin>
       </Label>
-      <DatePicker />
+      <DatePicker fx:id="data2" />
       <VBox prefHeight="60.0" prefWidth="123.0">
          <children>
             <RadioButton mnemonicParsing="false" onAction="#ChangeCenter" selected="true" text="Ordini Acquisto">
