--- a/src/main/resources/com/example/client/amministratore/adm-initial-page.fxml
+++ b/src/main/resources/com/example/client/amministratore/adm-initial-page.fxml
@@ -20,12 +20,8 @@
                   <Button fx:id="clientiButton" mnemonicParsing="false" onAction="#ShowLeftClienti" text="CLIENTI" />
                   <Button fx:id="ordiniProposteButton" mnemonicParsing="false" onAction="#ShowLeftOriniProposte" text="ORDINI E PROPOSTE" />
                   <Button fx:id="registraButton" mnemonicParsing="false" onAction="#registraImpiegato" text="REGISTRA IMPIEGATO" />
-                  <Button fx:id="reportButton" mnemonicParsing="false" onAction="#showRecordPage" text="REPORT" />
-                  <Label text="mario@mail.com">
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
-                  </Label>
+                  <Button fx:id="reportButton" mnemonicParsing="false" onAction="#showReportPage" text="REPORT" />
+                  <Button fx:id="credenzialiButton" mnemonicParsing="false" onAction="#showModificaCredenziali" text="CREDENZIALI" />
                   <Button fx:id="esciButton" mnemonicParsing="false" onAction="#exit" text="Esci" />
                </children>
                <padding>
