--- a/src/main/resources/com/example/client/amministratore/registrationForm.fxml
+++ b/src/main/resources/com/example/client/amministratore/registrationForm.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.client.AdmController">
    <children>
@@ -48,7 +49,7 @@
             <TextField fx:id="indirizzo" />
             <Label text="PASSWORD" />
             <TextField fx:id="password" />
-            <Label fx:id="registrationMessage" prefHeight="17.0" prefWidth="0.0" style="-fx-text-fill: red;" />
+            <Text fx:id="registrationMessage" strokeType="OUTSIDE" strokeWidth="0.0" />
             <Button mnemonicParsing="false" onAction="#registrazione" prefHeight="25.0" prefWidth="126.0" text="Registra Impiegato">
                <VBox.margin>
                   <Insets left="178.0" top="15.0" />
