--- a/src/main/resources/com/example/client/impiegato/center-vini.fxml
+++ b/src/main/resources/com/example/client/impiegato/center-vini.fxml
@@ -8,12 +8,12 @@
 
 <VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.client.SchedeController">
    <children>
-      <Label fx:id="centerTitle" text="ORDINI DI ACQUISTO">
+      <Label fx:id="centerTitle" text="VINI">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <HBox fx:id="lista" alignment="CENTER" prefHeight="162.0" prefWidth="560.0">
+      <HBox fx:id="gridVini" alignment="CENTER" prefHeight="186.0" prefWidth="560.0">
          <VBox.margin>
             <Insets top="30.0" />
          </VBox.margin>
