--- a/src/main/resources/com/example/client/impiegato/left-clienti.fxml
+++ b/src/main/resources/com/example/client/impiegato/left-clienti.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="TOP_CENTER" prefHeight="364.0" prefWidth="163.0" style="-fx-border-width: 0 1 0 0; -fx-border-color: black;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.client.FiltroController">
+<VBox fx:id="VBoxRicercaCliente" alignment="TOP_CENTER" prefHeight="364.0" prefWidth="163.0" style="-fx-border-width: 0 1 0 0; -fx-border-color: black;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.client.FiltroController">
    <children>
       <Label style="-fx-font-weight: bold;" text="FILTRI RICERCA">
          <VBox.margin>
