--- a/src/main/resources/com/example/client/impiegato/scheda-ordine-vendita.fxml
+++ b/src/main/resources/com/example/client/impiegato/scheda-ordine-vendita.fxml
@@ -1,47 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.client.SchedeController">
    <padding>
       <Insets bottom="50.0" left="150.0" right="150.0" top="50.0" />
    </padding>
    <children>
       <Label text="CLIENTE" />
-      <TextField editable="false" />
+      <TextField fx:id="email" editable="false" />
       <Label text="VINI ACQUISTATI" />
-      <ScrollPane prefHeight="132.0" prefWidth="300.0">
-         <content>
-            <GridPane gridLinesVisible="true" prefWidth="298.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="247.0" minWidth="10.0" prefWidth="247.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="213.0" minWidth="10.0" prefWidth="51.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <Label text="Vino" />
-                  <Label text="qnt" GridPane.columnIndex="1" />
-               </children>
-            </GridPane>
-         </content>
-      </ScrollPane>
+      <HBox fx:id="vini" prefHeight="100.0" prefWidth="200.0" />
       <Label text="INDIRIZZO  DI CONSEGNA" />
-      <TextField editable="false" />
+      <TextField fx:id="indirizzo" editable="false" />
       <Label text="DATA DI CONSEGNA" />
-      <TextField editable="false" />
+      <DatePicker fx:id="dataConsegna" prefHeight="26.0" prefWidth="315.0" />
       <Label text="PREZZO FINALE" />
-      <TextField editable="false" />
+      <TextField fx:id="prezzo" editable="false" />
+      <HBox prefHeight="47.0" prefWidth="300.0" spacing="185.0">
+         <children>
+            <Button mnemonicParsing="false" onAction="#indietroSC" text="indietro" />
+            <Button fx:id="firmaButton" mnemonicParsing="false" onAction="#onFirma" text="FIRMA" />
+         </children>
+         <VBox.margin>
+            <Insets top="10.0" />
+         </VBox.margin>
+      </HBox>
    </children>
 </VBox>
