--- a/src/main/resources/com/example/client/cliente/ordine-di-vendita.fxml
+++ b/src/main/resources/com/example/client/cliente/ordine-di-vendita.fxml
@@ -8,7 +8,7 @@
 <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="372.0" prefWidth="442.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.client.ControllerOrdine">
    <children>
       <HBox fx:id="gridOrdine" prefHeight="100.0" prefWidth="341.0" />
-      <Button fx:id="avantiButton" mnemonicParsing="false" onAction="#onAvantiClick" text="AVANTI">
+      <Button fx:id="avantiButton" mnemonicParsing="false" onAction="#onConfermaOrdineClick" text="CONFERMA ORDINE">
          <VBox.margin>
             <Insets top="20.0" />
          </VBox.margin>
