--- a/src/main/resources/com/example/client/cliente/client-initial-page.fxml
+++ b/src/main/resources/com/example/client/cliente/client-initial-page.fxml
@@ -24,7 +24,7 @@
             </HBox>
          </top>
          <left>
-            <VBox prefHeight="372.0" prefWidth="159.0" style="-fx-border-color: black; -fx-border-width: 0 1 0 0;" BorderPane.alignment="CENTER">
+            <VBox fx:id="LVboxRicerca" prefHeight="372.0" prefWidth="159.0" style="-fx-border-color: black; -fx-border-width: 0 1 0 0;" BorderPane.alignment="CENTER">
                <children>
                   <VBox fx:id="VboxRicerca" prefHeight="200.0" prefWidth="100.0" style="-fx-border-width: 0 0 1 0; -fx-border-color: black;">
                      <children>
