--- a/src/main/resources/com/example/client/cliente/left-ricerca.fxml
+++ b/src/main/resources/com/example/client/cliente/left-ricerca.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="372.0" prefWidth="159.0" style="-fx-border-color: black; -fx-border-width: 0 1 0 0;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.client.RicercaController">
+<VBox fx:id="LVboxRicerca" prefHeight="372.0" prefWidth="159.0" style="-fx-border-color: black; -fx-border-width: 0 1 0 0;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.client.RicercaController">
    <children>
       <VBox fx:id="VboxRicerca" prefHeight="200.0" prefWidth="100.0" style="-fx-border-width: 0 0 1 0; -fx-border-color: black;">
          <children>
