--- a/src/main/resources/com/example/client/cliente/scheda-bonifico.fxml
+++ b/src/main/resources/com/example/client/cliente/scheda-bonifico.fxml
@@ -18,9 +18,14 @@
             <Insets />
          </VBox.margin>
       </TextField>
-      <Button fx:id="button1" mnemonicParsing="false" onAction="#confermaPagamento" text="CONFERMA">
+      <Button fx:id="button1" mnemonicParsing="false" onAction="#confermaPagamento" text="CONFERMA PAGAMENTO">
          <VBox.margin>
             <Insets top="20.0" />
+         </VBox.margin>
+      </Button>
+      <Button fx:id="homeButton" disable="true" mnemonicParsing="false" onAction="#toHome" text="HOME" visible="false">
+         <VBox.margin>
+            <Insets top="10.0" />
          </VBox.margin>
       </Button>
    </children>
