--- a/src/main/resources/com/example/client/impiegato/scheda-ordine-vendita.fxml
+++ b/src/main/resources/com/example/client/impiegato/scheda-ordine-vendita.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Text?>
 
 <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.client.SchedeController">
    <padding>
@@ -32,5 +33,6 @@
             <Insets top="10.0" />
          </VBox.margin>
       </HBox>
+      <Text fx:id="resMessage" strokeType="OUTSIDE" strokeWidth="0.0" />
    </children>
 </VBox>
